# DCTAdam

./: README.md  pyproject.toml
dctadam/: Untitled-1.py  __init__.py  optimizer.py  utils.py
