[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dctadam"
version = "0.1.0"
description = "DCT-based Adam optimizer for PyTorch"
authors = [
    { name="Твоё Имя", email="you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "torch>=1.10",
    "scipy>=1.5"
]
